Use mime types in Reports export dialog

BUG: 424303
FIXED-IN: 5.1.3


(cherry picked from commit 6ee4bb9121182d0e39065e3850348d1e2e766ed6)